--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body{
         word-spacing: 1px;
         max-width: 100%;
 }
-@media(min-width: 750px){
+@media(min-width: 450px){
     .corpo{
         display: block;
         width: 500px;
@@ -125,6 +125,7 @@ body{
         
     }
     .nome{
+        display: block;
         color:black;
         font-size: 25px;
         width: 370px;
@@ -149,6 +150,64 @@ body{
         font-size:20px ;
     }
     .itens1 a{
+        font-size: 20px;
+    }
+}
+@media (min-width: px) {
+    .corpo {
+        display: block;
+        width: 500px;
+        height: 50px;
+        text-align: center;
+        position: absolute;
+        top: 40%;
+        left: 145px;
+    }
+
+    .rodape {
+        font-size: 12px;
+        position: absolute;
+        top: 80%;
+        left: 37%;
+        color: black;
+        padding: 10px;
+        text-align: center;
+        word-spacing: 1px;
+        max-width: 100%;
+    }
+
+    .foto img {
+        position: absolute;
+        top: 8%;
+        left: 358px;
+
+    }
+
+    .nome {
+        color: black;
+        font-size: 25px;
+        width: 370px;
+        height: 0px;
+        position: absolute;
+        top: 25%;
+        left: 29%;
+        text-align: center;
+
+    }
+
+    .insta {
+        font-size: 20px;
+        position: absolute;
+        top: 31%;
+        left:29%;
+
+    }
+
+    .itens a {
+        font-size: 20px;
+    }
+
+    .itens1 a {
         font-size: 20px;
     }
 }
