--- a/style.css
+++ b/style.css
@@ -1,213 +1,108 @@
-*{
-    padding: 0;
+body {
     margin: 0;
-    box-sizing: border-box;
-}
-body{
-    font: 400 1rem 'Roboto', sans-serif;
-    background: linear-gradient(0, rgb(226, 121, 121),#e3c3ab);
+    padding: 0;
+    background-image: url(fundo.png);
+    background-size: cover;
     width: 100vw;
     height: 100vh;
-       
 }
-
-.corpo{
-    display: block;
-    width: 300px;
-    height: 350px;
-    text-align: center;
-    position: absolute;
-    top: 250px;
-    left: 55px;
-    
-    
+#container {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    margin: auto; 
 }
-.foto img{
-    border-radius: 50px;
-    position: absolute;
-    top: 80px;
-    left: 40%;
-    border-radius: 500%;
+img{
+    border-radius: 100px;
+    display: flex;
+    padding-top: 10px;
+    margin: auto;
 }
-.nome{
-    color:black;
+.nome {
+    font-family: sans-serif;
+    color: black;
+    text-align: center;    
+}
+h1 {
+    font-size: 30px;
+}
+h2 {
     font-size: 20px;
-    width: 370px;
-    height: 0px;
-    position: absolute;
-    top: 27%;
-    left: 5%;
+    color: #a88b74
+}
+p {
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #a88b74;
+}
+.itens {
+    width: 500px;
     text-align: center;
+    margin: auto;
     
+}
+.itens ul{
+    list-style: none;
+    padding: 4px;
+    font-size: 14px;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+}
+.itens li {
+    border-radius: 10px;
+    border: 1px solid black;
+    padding: 3px;
 }
 
-.insta{
-    color: #118eae;
-    font-size: 15px;
-    width: 370px;
-    height: 0px;
-    position: absolute;
-    top: 31%;
-    left: 5%;
+.itens a{
     text-align: center;
+    font-family: sans-serif;
+    text-decoration: none;
+    color: black; 
+    padding-left: 20px; 
+    padding-right: 20px;
 }
-.itens{
-    
-    border: 1px solid black;
-    border-radius: 15px;
-    padding: 4px;
-    margin-top: 20px;
-    font-size: 1.1rem;
-    
-}
-.itens:hover{
+.itens li:hover {
     background-color: #118eae;
     transition: 1s;
 }
-.itens1{
-    font-size: 1.1rem;
+.itens #a1{
     background-color: #118eae;
-    border-radius:15px;
-    border: 1px solid black;
-    padding: 4px;
+
 }
-.itens1:hover{
+.itens  #a1:hover{
     background-color: white;
-    transition: 1s;
 }
 
-.itens1 a{
-    text-decoration: none;
-    color: black;
-    font-size: 14px;
+#rodape {
+    margin: auto;
+    text-align: center;
+    color: #a88b74;
 }
-.itens a {
-    text-decoration: none;
-    color: black;
-    font-size: 14px;
+#rodape ul {
+    margin-left: -35px;
 }
-.rodape{
-        font-size: 12px;
-        position: absolute;
-        top: 80%;
-        left: 23%;
-        color: black;
-        padding: 10px;
-        text-align: center;
-        word-spacing: 1px;
-        max-width: 100%;
+
+@media screen and (max-width: 500px){
+img {
+    border-radius: 100px;
+    margin-left: 10px;
 }
-@media(min-width: 450px){
-    .corpo{
-        display: block;
-        width: 500px;
-        height: 50px;
-        text-align: center;
-        position: absolute;
-        top: 250px;
-        left: 450px;
-    }
-    .rodape{
-        font-size: 12px;
-        position: absolute;
-        top: 80%;
-        left: 41%;
-        color: black;
-        padding: 10px;
-        text-align: center;
-        word-spacing: 1px;
-        max-width: 100%;
-    }
-    .foto img{
-        position: absolute;
-        top: 10%;
-        left: 650px;
-        
-    }
-    .nome{
-        display: block;
-        color:black;
-        font-size: 25px;
-        width: 370px;
-        height: 0px;
-        position: absolute;
-        top: 25%;
-        left: 37%;
-        text-align: center;
+h1 {
+   font-size: 24px; 
+   margin-top: -20%;
+   margin-left: 25%;
+}
+h2 {
+    font-size: 15px;
+    margin-top: -3%;
+    margin-left: 20%;
+}
+.itens {
+    margin-top: 80px;
+    width: 100vw;
+}
+
     
-}
-
-    .insta{
-        font-size: 20px;
-        position: absolute;
-        top: 31%;
-        left: 37%;
-        
-    }
-    
-    .itens a
-    {
-        font-size:20px ;
-    }
-    .itens1 a{
-        font-size: 20px;
-    }
-}
-@media (min-width: px) {
-    .corpo {
-        display: block;
-        width: 500px;
-        height: 50px;
-        text-align: center;
-        position: absolute;
-        top: 40%;
-        left: 145px;
-    }
-
-    .rodape {
-        font-size: 12px;
-        position: absolute;
-        top: 80%;
-        left: 37%;
-        color: black;
-        padding: 10px;
-        text-align: center;
-        word-spacing: 1px;
-        max-width: 100%;
-    }
-
-    .foto img {
-        position: absolute;
-        top: 8%;
-        left: 358px;
-
-    }
-
-    .nome {
-        color: black;
-        font-size: 25px;
-        width: 370px;
-        height: 0px;
-        position: absolute;
-        top: 25%;
-        left: 29%;
-        text-align: center;
-
-    }
-
-    .insta {
-        font-size: 20px;
-        position: absolute;
-        top: 31%;
-        left:29%;
-
-    }
-
-    .itens a {
-        font-size: 20px;
-    }
-
-    .itens1 a {
-        font-size: 20px;
-    }
 }
