--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-image: url(fundo.png);
+    background-image: url(img/fundo.png);
     background-size: cover;
     width: 100vw;
     height: 100vh;
